Fixed z-index issue for name tooltip and detail view

--- a/src/styles/DetailView.css
+++ b/src/styles/DetailView.css
@@ -10,6 +10,7 @@
 	padding: 20px;
 	display: flex;
 	border-radius: 10px;
+	z-index: 1000;
 }
 
 .detail-img {
